Fix logo overflow on intro page

--- a/src/components/index/styles/introduction.css
+++ b/src/components/index/styles/introduction.css
@@ -29,27 +29,28 @@
   max-height: 100%;
 }
 
+.intro-logo-container {
+  display: flex;
+  gap: 1rem;
+  width: 90%;
+  margin: 0 auto;
+}
+
 .intro-turtles {
-  width: 128px; /* lg-size * 0.8 */
+  width: 30%; /* lg-size * 0.8 */
   margin-bottom: 0;
   /* Remove bottom margin */
 }
 
-
 .intro-logo-text {
   margin-top: -5px;
   /* Use negative margin to pull it closer to the turtles */
-  width: 288px; /* lg-size * 0.8 */
+  width: 65%; /* lg-size * 0.8 */
 }
 
 @media (min-width: 1024px) {
-  .intro-turtles {
-    width: 140px;
-    /* Adjust width for larger screens */
-  }
-  .intro-logo-text {
-    width: 345px;
-    /* Adjust width for larger screens */
+  .intro-logo-container {
+    width: 100%;
   }
 }
 
